# ids22-miniproject

./: .gitignore  Dockerfile  EDA.ipynb  dataproject.py  fly.toml  merge_load_price_generation.ipynb  merge_oil_prices.ipynb  pyproject.toml  technical_report-new.ipynb  technical_report.ipynb  time_series_forecasting.ipynb  wrangle_weather.ipynb
backend/: app.py  estimate.py
data/: Actual Generation per Production Type_201501010000-201601010000.csv  Actual Generation per Production Type_201601010000-201701010000.csv  Actual Generation per Production Type_202201010000-202301010000.csv  Day-ahead Prices_201501010000-201601010000.csv  Day-ahead Prices_201601010000-201701010000.csv  Day-ahead Prices_201609010000-201609020000.csv  Day-ahead Prices_201701010000-201801010000.csv  Day-ahead Prices_201801010000-201901010000.csv  Day-ahead Prices_201901010000-202001010000.csv  Day-ahead Prices_202001010000-202101010000.csv  Day-ahead Prices_202201010000-202301010000.csv  PET_PRI_SPT_S1_D.xls  Total Load - Day Ahead _ Actual_201501010000-201601010000.csv  Total Load - Day Ahead _ Actual_201601010000-201701010000.csv  Total Load - Day Ahead _ Actual_201701010000-201801010000.csv  Total Load - Day Ahead _ Actual_201801010000-201901010000.csv  Total Load - Day Ahead _ Actual_201901010000-202001010000.csv  Total Load - Day Ahead _ Actual_202001010000-202101010000.csv  Total Load - Day Ahead _ Actual_202101010000-202201010000.csv  Total Load - Day Ahead _ Actual_202201010000-202301010000.csv  all_load_data.csv  all_pricedata.csv  weather_lohja.csv
frontend/: package-lock.json  (+2 more)
(+18 files in other folders)
